hphp/test/slow/readonly/basesc_cow.php.expectf
Fatal error: Uncaught exception 'ReadonlyViolationException' with message 'Property c of class Foo is readonly, and therefore must be a value type to be modified.' in %s/basesc_cow.php:11
%A
